<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimerStopwatch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section_stopwatch">Stopwatch</string>
    <string name="title_section_timer">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="start_stopwatch_button">Start</string>
    <string name="reset_stopwatch_button">reset</string>
    <string name="stop_stopwatch_button">stop</string>
    <string name="stopwatch_default_value">00:00:00</string>
    <string name="lap_stopwatch_button_label">Lap</string>
    <string name="start_timer_button_label">Start</string>
    <string name="stop_alarm_button_label">Stop</string>
    <string name="timer_label">30</string>

</resources>
