<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="se.randiga.timerstopwatch.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/timer_value"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/timer_label"
        android:textSize="@dimen/text_large"/>


    <Button
        android:id="@+id/start_timer_button"
        android:text="@string/start_timer_button_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/timer_value"
        android:layout_alignParentLeft="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startTimer"/>

    <Button
        android:id="@+id/stop_alarm_button"
        android:text="@string/stop_alarm_button_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/start_timer_button"
        android:layout_alignParentLeft="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="stopAlarm"/>

</RelativeLayout>
